# etl-data

./: .gitignore  init_database.py  main.py  pyproject.toml
configs/: pl_data_config.json  sales_data_config.json
src/: data_extractor.py  data_inspector.py  data_processor.py  pipeline_selector.py
src/database/: client.py  controller.py  structure.py
src/database_controller/: controller.py
src/helper/: result_writer.py
src/processors/: data_extractor.py
src/sqls/: create_view.sql
src/utils/: write_excel.py
test/: questionary_test.py  test_config_load.ipynb
