[project]
name = "etl-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "questionary>=2.1.1",
    "sqlalchemy>=2.0.51",
]
